apps/ext/radarr/endpoints.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: radarr
  namespace: ext
subsets:
- addresses:
  - ip: 10.0.0.10
  ports:
  - name: app
    port: 9876
    protocol: TCP
