apps/ext/radarr/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: ext
spec:
  ports:
  - name: app
    port: 80
    protocol: TCP
    targetPort: 9876
  clusterIP: None
  type: ClusterIP
