apps/ext/radarr/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
 name: radarr-http
 namespace: ext
spec:
 entryPoints:
  - web
 routes:
  - match: Host(`radarr.absolutist.it`) || Host(`radarr.wahoo.li`)
    kind: Rule
    middlewares:
    - name: https-only
      namespace: traefik
    services:
     - name: radarr
       port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
 name: radarr-https
 namespace: ext
spec:
 entryPoints:
  - websecure
 routes:
  - match: Host(`radarr.absolutist.it`) || Host(`radarr.wahoo.li`)
    kind: Rule
    priority: 10
    middlewares:
    - name: forwarded-proto-https
      namespace: traefik
    - name: gzip
      namespace: traefik
    - name: authentik
      namespace: traefik
    services:
     - name: radarr
       scheme: http
       port: 80
 tls:
  secretName: tls-radarr-ingress
